update latest journey videos and bug issue

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                     <td><span class="badge bg-primary">Chrome</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
-                                    <td><a href="https://www.loom.com/share/90f42fba272f4d12ab3e26376abe6b97?sid=d795b7b3-202f-48d0-a9a9-34a5af5bb3e0" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/49776c2137e441d591b0500715dc35a8?sid=eca420ed-4006-47b6-a26a-9ee967e0f0c0" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-success">Yes</span></td>
                                     <td><span class="badge bg-success">Complete</span></td>
                                 </tr>
@@ -297,7 +297,7 @@
                                     <td><span class="badge bg-warning text-dark">Brave</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
-                                    <td><a href="https://www.loom.com/share/fd34e3cd156a45ad9c8df6ca7eb73381?sid=8b5263f5-89e9-45b3-9b81-6a09d92bded1" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/9052c67965bb4609bc3eeac02bd06c3f?sid=f52444cb-4a88-478f-af87-98ad668d8df0" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -308,7 +308,7 @@
                                     <td><span class="badge bg-primary">Chrome</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
-                                    <td><a href="https://www.loom.com/share/9780099755de4dc693423186c07da257?sid=0dbfc3ca-e3cc-4a27-abc2-433342a77475" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/3ad362c2a5d54fc4b83ced79b0ac2105?sid=d2ac2a48-b4ff-4ed7-8880-e96e2fa83c9b" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-success">Complete</span></td>
                                 </tr>
@@ -319,7 +319,7 @@
                                     <td><span class="badge bg-info">Microsoft Edge</span></td>
                                     <td><span class="badge bg-primary">Coinbase Wallet</span></td>
                                     <td><span class="badge bg-info">Receives delegations</span></td>
-                                    <td><a href="https://www.loom.com/share/29c08830bdea42e4b55eaa462857cda1?sid=f5b09d4a-6a7a-4436-9e13-927dc3e53d11" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/b0babe4a264746d1b044ff803594fc49?sid=af63e30f-4ebb-4ad8-8c36-9e0beb3ec617" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-success">Complete</span></td>
                                 </tr>
@@ -330,7 +330,7 @@
                                     <td><span class="badge bg-primary">Chrome</span></td>
                                     <td><span class="badge bg-info">MetaMask</span></td>
                                     <td><span class="badge bg-success">FILM → Keith Fellini</span><br><small class="text-muted">T4L3NT Mainnet</small></td>
-                                    <td><a href="https://www.loom.com/share/ce7f04b1a2bd4960a88026a9aac81f26?sid=74158e59-e9a1-4a88-8719-f9286f55da16" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/80e8e957237349fc810437f5abff3ac5?sid=722578e0-d364-42e2-a010-d10faf53e88f" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-success">Complete</span></td>
                                 </tr>
@@ -352,9 +352,9 @@
                                     <td><span class="badge bg-danger">Firefox</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
-                                    <td><a href="https://www.loom.com/share/534d0dd66709460db0463b21fc1c3d04?sid=ac302cfe-19fc-4237-9ce6-ff7e7c800417" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/694b7a6d567942c2b0e6502608dbf602" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
-                                    <td><span class="badge bg-danger">Not Migrated</span></td>
+                                    <td><span class="badge bg-warning">Coinbase Issue Found</span></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -738,6 +738,25 @@
                                 <li>The process is designed to be idempotent - safe to retry if interrupted</li>
                                 <li>Users can view their migration status at any time from their profile</li>
                             </ul>
+                        </div>
+
+                        <div class="alert alert-warning mt-3">
+                            <h6 class="alert-heading">Video Note: Kanley Stubrick's Journey</h6>
+                            <p class="mb-0">
+                                <i class="bi bi-info-circle me-2"></i>
+                                In Kanley's video, the issued NFT was not displayed in the DCP UI due to an AWS configuration error that has since been fixed. 
+                                The migration process itself completed successfully - this was a display issue only.
+                            </p>
+                        </div>
+
+                        <div class="alert alert-info mt-3">
+                            <h6 class="alert-heading">Bug Discovery: New User Coinbase Wallet Issue</h6>
+                            <p class="mb-0">
+                                <i class="bi bi-bug me-2"></i>
+                                <strong>Issue Found:</strong> New user signup with Coinbase Wallet fails with "WalletServicesPluginError: Invalid session inside wallet services" 
+                                and "Wallet Services plugin is not connected" errors. MetaMask works correctly in the same scenario. 
+                                This is not a show-stopper but should be investigated for new user onboarding.
+                            </p>
                         </div>
                     </div>
                 </div>
