--- a/wallet-compatibility.html
+++ b/wallet-compatibility.html
@@ -81,6 +81,23 @@
         </div>
     </div>
 
+    <!-- Bug Discovery Celebration -->
+    <div class="container mb-4">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <img src="character-images/Bug Discovery Celebration.png" alt="Bug Discovery Celebration" class="img-fluid rounded" style="max-height: 300px;">
+                        <h4 class="mt-3 text-primary">Bug Discovery Celebration!</h4>
+                        <p class="text-muted">
+                            Our testing process continues to identify important issues that help improve the migration experience.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <!-- Desktop Wallet Compatibility Matrix -->
         <section id="desktop-wallets" class="mb-5">
