update latest journey videos and bug issue

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                     <td><span class="badge bg-danger">Firefox</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
-                                    <td><a href="https://www.loom.com/share/694b7a6d567942c2b0e6502608dbf602" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><a href="https://www.loom.com/share/694b7a6d567942c2b0e6502608dbf602?sid=7f629579-e337-47cb-b503-0bd9138cf77f" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-warning">Coinbase Issue Found</span></td>
                                 </tr>
