--- a/test-gaps.html
+++ b/test-gaps.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="test-gaps.html">Test Gaps</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="staking-contract-security-review.html">Security Review</a>
+                    </li>
                 </ul>
             </div>
         </div>
