error handling example

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="staking-contract-security-review.html">Security Review</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="dcp-plus.html">DCP+ Platform</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -785,7 +788,7 @@
                         <div class="row g-4">
                             <div class="col-md-6">
                                 <div class="card h-100">
-                                    <img src="claiming-flow-images/google-auth-migration-error-1.png" class="card-img-top" alt="Migration Error Dialog: DCP is now on Base">
+                                    <img src="claiming-flow-images/error-handling.png" class="card-img-top" alt="Migration Error Dialog: DCP is now on Base">
                                     <div class="card-body">
                                         <h5 class="card-title">Step 1: Migration Error Dialog</h5>
                                         <p class="card-text">The user is informed that a previous claim attempt failed, but no data was lost. The process can be retried.</p>
@@ -794,7 +797,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="card h-100">
-                                    <img src="claiming-flow-images/google-auth-migration-error-2.png" class="card-img-top" alt="Wallet Address Mismatch Error">
+                                    <img src="claiming-flow-images/error-message.png" class="card-img-top" alt="Wallet Address Mismatch Error">
                                     <div class="card-body">
                                         <h5 class="card-title">Step 2: Wallet Address Mismatch</h5>
                                         <p class="card-text">After clicking OK, the user receives an error indicating the connected wallet does not match the user account. The user is prompted to connect the correct wallet or contact support.</p>
