--- a/dcp-plus.html
+++ b/dcp-plus.html
@@ -112,6 +112,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="dcp-plus.html">DCP+ Platform</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="dcp-plus-testing.html">DCP+ Testing</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -616,6 +619,90 @@
                                     <li><strong>Due Date:</strong> When must this decision be made?</li>
                                     <li><strong>Decision Path:</strong> How will the final decision be made and communicated?</li>
                                 </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testing Strategy Call-to-Action -->
+        <section class="mb-5">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card border-primary">
+                        <div class="card-header bg-primary text-white">
+                            <h3 class="h5 mb-0">
+                                <i class="bi bi-bug me-2"></i>
+                                Testing Strategy & Quality Assurance
+                            </h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="row align-items-center">
+                                <div class="col-lg-8">
+                                    <h5 class="text-primary mb-3">Comprehensive Testing Approach</h5>
+                                    <p class="lead mb-3">
+                                        DCP+ requires a sophisticated testing strategy that covers smart contracts, media pipeline, 
+                                        user experience, and cross-platform compatibility. Our testing approach ensures both 
+                                        technical reliability and exceptional user experience.
+                                    </p>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h6 class="text-success">Testing Coverage:</h6>
+                                            <ul class="list-unstyled">
+                                                <li class="mb-1">
+                                                    <i class="bi bi-check-circle text-success me-2"></i>
+                                                    Smart Contract Security & Functionality
+                                                </li>
+                                                <li class="mb-1">
+                                                    <i class="bi bi-check-circle text-success me-2"></i>
+                                                    Media Pipeline & DRM Integration
+                                                </li>
+                                                <li class="mb-1">
+                                                    <i class="bi bi-check-circle text-success me-2"></i>
+                                                    Cross-Platform User Experience
+                                                </li>
+                                                <li class="mb-1">
+                                                    <i class="bi bi-check-circle text-success me-2"></i>
+                                                    Performance & Scalability Testing
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <h6 class="text-info">Quality Assurance:</h6>
+                                            <ul class="list-unstyled">
+                                                <li class="mb-1">
+                                                    <i class="bi bi-shield-check text-info me-2"></i>
+                                                    Automated Testing Pipeline
+                                                </li>
+                                                <li class="mb-1">
+                                                    <i class="bi bi-shield-check text-info me-2"></i>
+                                                    Risk Assessment Matrix
+                                                </li>
+                                                <li class="mb-1">
+                                                    <i class="bi bi-shield-check text-info me-2"></i>
+                                                    Test Environment Strategy
+                                                </li>
+                                                <li class="mb-1">
+                                                    <i class="bi bi-shield-check text-info me-2"></i>
+                                                    Continuous Integration/Deployment
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 text-center">
+                                    <div class="mb-3">
+                                        <i class="bi bi-bug display-1 text-primary opacity-75"></i>
+                                    </div>
+                                    <a href="dcp-plus-testing.html" class="btn btn-primary btn-lg">
+                                        <i class="bi bi-arrow-right me-2"></i>
+                                        View Testing Strategy
+                                    </a>
+                                    <p class="text-muted mt-2 small">
+                                        Comprehensive testing approach for DCP+ platform
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
