set up mobie test gherkins

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                         <a class="nav-link" href="gherkin-scenarios.html">Test Scenarios</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="mobile-testing-gherkins.html">Mobile Testing</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="migration-testing-challenges.html">Testing Challenges</a>
                     </li>
                     <li class="nav-item">
